--- a/hdcal.css
+++ b/hdcal.css
@@ -11,7 +11,8 @@ color:#000000;
 list-style-type:none;
 width:100%;
 float:left;
--webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
+}
 
 li.menu-item {
 margin:5px;
@@ -19,7 +20,8 @@ padding:10px;
 background-color:#f5deb3;
 color:#000000;
 float:left;
--webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
+}
 
 .label {width:100%;
 color:black;
@@ -55,10 +57,11 @@ text-align:left;
 color:black;
 padding:0.2em;
 font-weight:bold;
--webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
+}
 
 .calenderSpace {width:100%;
 color:black;
 padding:0.2em;
--webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
-
+-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
+}
